--- a/src/sass/blocks/contacts.scss
+++ b/src/sass/blocks/contacts.scss
@@ -1,7 +1,3 @@
-@import "./variables.scss";
-@import "./style.scss";
-@import "./fonts.scss";
-
 .contacts {
   @media (min-width: $breakpoint-l) {
     position: relative;
@@ -11,7 +7,7 @@
     padding: 26px 20px;
     display: flex;
     justify-content: space-between;
-    background-color: $basic-grey;
+    background-color: $white;
 
     @media (min-width: $breakpoint-m) {
       padding: 60px 70px 56px;
@@ -24,7 +20,7 @@
       width: 565px;
       padding-left: 80px;
       padding-right: 80px;
-      background-color: $white;
+      z-index: 1;
     }
   }
 
@@ -47,6 +43,7 @@
 
   &__address {
     width: 140px;
+    margin: 0;
     color: $special-grey;
     font-family: $font-body;
     font-weight: 400;
@@ -61,7 +58,7 @@
       text-align: right;
     }
 
-    & p {
+    & br {
       @media (max-width: $breakpoint-m) {
         display: none;
       }
@@ -70,11 +67,18 @@
 
   &__map {
     display: block;
+    width: 320px;
+    height: 362px;
     margin: 0 auto;
   
     @media (min-width: $breakpoint-m) {
-      width: 100%;
-      // height: 400px;
+      width: 768px;
+      height: 400px;
+    }
+
+    @media (min-width: $breakpoint-l) {
+      width: 1440px;
+      height: 400px;
     }
   }
 }
