--- a/src/sass/blocks/description.scss
+++ b/src/sass/blocks/description.scss
@@ -1,7 +1,3 @@
-@import "./variables.scss";
-@import "./style.scss";
-@import "./fonts.scss";
-
 .description {
   padding: 0 20px 29px;
   position: relative;
@@ -102,19 +98,19 @@
     }
 
     &--composition::before {
-      background-image: url("../assets/img/icon_composition.svg");
+      background-image: url("../../img/icon_composition.svg");
     }
 
     &--powder::before {
-      background-image: url("../assets/img/icon_powder.svg");
+      background-image: url("../../img/icon_powder.svg");
     }
 
     &--meal::before {
-      background-image: url("../assets/img/icon_meal.svg");
+      background-image: url("../../img/icon_meal.svg");
     }
 
     &--changes::before {
-      background-image: url("../assets/img/icon_changes.svg");
+      background-image: url("../../img/icon_changes.svg");
     }
   }
 }
