--- a/src/sass/blocks/example.scss
+++ b/src/sass/blocks/example.scss
@@ -1,7 +1,3 @@
-@import "./variables.scss";
-@import "./style.scss";
-@import "./fonts.scss";
-
 .example {
   background-color: #eaeaea;
   padding: 25px 20px 40px;
@@ -148,6 +144,7 @@
 
   &__cost {
     margin: 0 0 40px;
+    padding-right: 31px;
     font-family: $font-heading;
     font-weight: 400;
     font-size: 14px;
@@ -224,7 +221,6 @@
 }
 
 .switcher {
-
   &__button {
     padding: 5px 0 5px;
     border: none;
