--- a/src/sass/blocks/footer.scss
+++ b/src/sass/blocks/footer.scss
@@ -1,7 +1,3 @@
-@import "./variables.scss";
-@import "./style.scss";
-@import "./fonts.scss";
-
 .page-footer {
   padding: 39px 20px 22px;
   background-color: $basic-grey;
@@ -37,7 +33,6 @@
     width: 130px;
     margin: 0;
     padding: 0;
-
   }
 
   &::before,
@@ -63,31 +58,87 @@
   }
 
   &__link {
-    position: relative;
     display: block;
     width: 23px;
     height: 23px;
-    background-repeat: no-repeat;
-    background-position: center;
 
     @media (min-width: $breakpoint-m) {
       width: 30px;
       height: 33px;
     }
 
-    // &--vk {
-    //   background-image: url("../assets/img/icon_vkontakte.svg");
-    // }
+    &--vk {
+      padding: 2px 0;
+      
+      &:hover svg path {
+        fill: $basic-green;
+      }
 
-    // &--instagram {
-    //   background-image: url("../assets/img/icon_instagram.svg");
-    // }
+      &:active svg {
+        opacity: 0.3;
+      }
 
-    // &--facebook {
-    //   background-image: url("../assets/img/icon_facebook.svg");
-    // }
+      @media (min-width: $breakpoint-m) {
+        padding: 8px 0 0;
+      }
 
+      & svg path {
+        display: block;
+
+        @media (min-width: $breakpoint-m) {
+          width: 29px;
+          height: 17px;
+        }
+      }
+    }
     
+    &--instagram {
+      padding: 4px 0 0;
+
+      &:hover svg path {
+        fill: $basic-green;
+      }
+
+      &:active svg {
+        opacity: 0.3;
+      }
+
+      @media (min-width: $breakpoint-m) {
+        padding-top: 6px;
+      }
+
+      svg {
+        display: block;
+        width: 16px;
+        height: 16px;
+        margin: auto;
+
+        @media (min-width: $breakpoint-m) {
+          width: 23px;
+          height: 23px;
+        } 
+      }
+    }
+    
+    &--facebook {
+      &:hover svg path {
+        stroke: $basic-green;
+      }
+
+      &:active svg {
+        opacity: 0.3;
+      }
+
+      & svg path {
+        display: block;
+
+        @media (min-width: $breakpoint-m) {
+          width: 13px;
+          height: 27px;
+          
+        } 
+      }
+    }
   }
 }
 
@@ -111,10 +162,22 @@
   }
 }
 
-.developer__name {
+.developer {
+  &__image {
+    &:hover path {
+      fill: $basic-green;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+  }
+
+  &__name {
   padding-top: 6px;
 
   @media (min-width: $breakpoint-m) {
     margin-right: 22px;
   }
+}
 }
