--- a/src/sass/blocks/promo.scss
+++ b/src/sass/blocks/promo.scss
@@ -1,7 +1,3 @@
-@import "./variables.scss";
-@import "./style.scss";
-@import "./fonts.scss";
-
 .page-main__header {
   padding: 27px 20px 0;
 
@@ -18,7 +14,7 @@
   background-color: $white;
   background-image: 
     linear-gradient(rgba(104, 183, 56, 0.85) 0, rgba(104, 183, 56, 0.85) 302px, $white 302px),
-    url("../assets/img/promo-background.jpg");
+    url("../../img/promo-background.jpg");
   background-repeat: no-repeat;
   background-size: 100% 64%, auto 64%;
   background-position: left 0, right 0;
@@ -45,7 +41,7 @@
       z-index: -1;
       background-image: 
         linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
-        url("../assets/img/index-background-desktop.jpg");
+        url("../../img/index-background-desktop.jpg");
       background-repeat: no-repeat;
       background-position: 0 100%;
       background-size: cover;
