--- a/src/sass/blocks/example.scss
+++ b/src/sass/blocks/example.scss
@@ -3,12 +3,17 @@
   padding: 25px 20px 40px;
 
   @media (min-width: $breakpoint-m) {
+    display: grid;
+    grid-template-columns: 396px 1fr;
     padding: 43px 0 0;
     background-color: $white;
   }
 
   @media (min-width: $breakpoint-l) {
-    padding: 0;
+    grid-template-columns: 1fr 591px;
+    column-gap: 193px;
+    padding: 0 110px 65px;
+    background-image: linear-gradient(to bottom, $white 20%, $basic-grey 20%);
   }
 
   &__heading {
@@ -17,27 +22,13 @@
     }
 
     @media (min-width: $breakpoint-l) {
-      margin-left: 110px;
       margin-bottom: 76px;
-    }
-  }
-
-  &__wrap {
-    @media (min-width: $breakpoint-m) {
-      display: grid;
-      grid-template-columns: 396px 1fr;
-    }
-
-    @media (min-width: $breakpoint-l) {
-      grid-template-columns: 1fr 591px;
-      column-gap: 193px;
-      padding: 0 110px 75px;
-      background-color: $basic-grey;
+      margin-left: 0;
     }
   }
 
   &__text {
-    margin: 0 30px 20px;
+    margin: 0 0 20px;
     font-family: $font-body;
     font-weight: 400;
     font-size: 14px;
@@ -46,13 +37,14 @@
 
     @media (min-width: $breakpoint-m) {
       grid-column: 1/3;
-      margin-bottom: 54px;
+      margin: 0 30px 54px;
       padding-top: 31px;
       font-size: 16px;
       line-height: 24px;
     }
 
     @media (min-width: $breakpoint-l) {
+      grid-row: 2/3;
       grid-column: 1/2;
       padding-top: 70px;
       margin: 0 0 69px;
@@ -66,12 +58,11 @@
     margin: 0 0 34px;
 
     @media (min-width: $breakpoint-m) {
-      margin-bottom: 242px;
+      margin-bottom: 80px;
       margin-left: 30px;
     }
 
     @media (min-width: $breakpoint-l) {
-      grid-row: 2/3;
       width: 366px;
       margin-bottom: 60px;
       margin-left: 0;
@@ -144,7 +135,6 @@
 
   &__cost {
     margin: 0 0 40px;
-    padding-right: 31px;
     font-family: $font-heading;
     font-weight: 400;
     font-size: 14px;
@@ -155,12 +145,14 @@
     @media (min-width: $breakpoint-m) {
       width: 174px;
       margin-left: auto;
+      margin-right: 31px;
+      padding: 0;
       text-align: right;
       font-size: 20px;
     }
 
     @media (min-width: $breakpoint-l) {
-      grid-row: 3/4;
+      grid-row: 4/5;
       width: 100%;
       margin: 0;
       text-align: left;
@@ -169,18 +161,37 @@
 
   &__images {
     @media (min-width: $breakpoint-m) {
+      position: relative;
       grid-column: 1/3;
-      display: grid;
-      grid-template-columns: 50% 1fr;
+      display: inline-block;
       padding: 0 58px;
-      overflow: hidden;
-      background-color: #eaeaea;
+      background-image: linear-gradient(to bottom, $white 33%, #eaeaea 33%);
     }
 
     @media (min-width: $breakpoint-l) {
       grid-column: 2/3;
-      grid-row: 1/3;
-      background-color: $basic-grey;
+      grid-row: 1/4;
+      background-image: none;
+    }
+  }
+
+  &__container {
+    @media (min-width: $breakpoint-m) {
+      background-image: linear-gradient(to bottom, $white 33%, #eaeaea 33%);
+    }
+
+    @media (min-width: $breakpoint-l) {
+      background-image: linear-gradient(to bottom, $white 24%, $basic-grey 24%);
+    }
+
+    &--before {
+      @media (min-width: $breakpoint-m) {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        overflow: hidden;
+      }
     }
   }
 
@@ -189,12 +200,34 @@
 
     &--active {
       display: block;
+      height: 232px;
       margin: 0 auto 15px;
+
+      @media (min-width: $breakpoint-m) {
+        margin: 0;
+      }
+    }
+
+    &--after {
+      @media (min-width: $breakpoint-m) {
+        margin: 0 0 0 auto;
+      }
+    }
+
+    &--before {
+      @media (min-width: $breakpoint-m) {
+        margin: 0 0 0 60px;
+      }
+
+      @media (min-width: $breakpoint-l) {
+        margin: 0 0 0 20px;
+      }
     }
 
     @media (min-width: $breakpoint-m) {
-      display: flex;
-      overflow: hidden;
+      display: block;
+      height: 511px;
+      width: 592px;
     }
   }
 
@@ -208,13 +241,14 @@
     @media (min-width: $breakpoint-m) {
       grid-column: 1/3;
       grid-template-columns: 70px 1fr 70px;
-      padding: 0 98px;
+      padding: 0 98px 57px;
       background-color: #eaeaea;
     }
 
     @media (min-width: $breakpoint-l) {
       grid-column: 2/3;
-      grid-row: 3/4;
+      grid-row: 4/5;
+      padding-bottom: 0;
       background-color: $basic-grey;
     }
   }
