--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -93,7 +93,7 @@ img {
   line-height: 40px;
 
   @media (min-width: $breakpoint-m) {
-    margin-bottom: 32px;
+    // margin-bottom: 32px;
     font-size: 60px;
     line-height: 60px;
   }
